# universal-robots

./: .canon.yaml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bernie.json  build.ninja  cmake_install.cmake  compile.sh  conanfile.py  embed.h  lint.sh  main.cpp  meta.json  meta.json-no-app-image.in  meta.json.in  monitor.cpp  my.json  protobuf-override.profile  run.sh  test.cpp  trajectory.txt  ur5-module.json  ur5earm-x86  urmodtester.json  viam-sasha-main.json
.github/workflows/: build.yml  ci.yml  docker.yml  format.yml  main.yml  publish.yml  test.yml
graph/: Makefile  README.md  go.mod  go.sum  graph.go  graph.py  graph_actual.py  graph_desired.py  graph_joint_inputs.py  graph_poses.py
packaging/appimages/: .gitignore  universal-robots-aarch64.yml  universal-robots-arm64.yml  universal-robots-x86_64.yml
src/: UR5e-Arm.cpp  UR5e-Arm.hpp  robot_wrapper.cpp  robot_wrapper.h  robot_wrapper.hpp  ur5e_arm.cpp  ur5e_arm.hpp  ur_arm.cpp  ur_arm.hpp  utils.h
src/control/: external_control.urscript  rtde_input_recipe.txt  rtde_output_recipe.txt
src/kinematics/: ur20.json  ur20.urdf  ur3e.json  ur5e.json  ur7e.json
src/ur/utils/visualization/: Makefile  README.md  go.mod  graph.go  graph_test.go
src/viam/trajex/: CMakeLists.txt  README.md  conanfile.py  meta.json.in  trajex.cpp  trajex.hpp
src/viam/trajex/src/viam/trajex/service/: colinearization.cpp  colinearization.hpp  main.cpp  mlmodel.cpp  mlmodel.hpp  sampling_utils.hpp  trajectory_planner.cpp  trajectory_planner.hpp  trajex_mlmodel_service.cpp  trajex_mlmodel_service.hpp
src/viam/trajex/src/viam/trajex/service/test/: mlmodel.cpp  trajectory_planner.cpp  trajex_mlmodel_service.cpp
src/viam/trajex/src/viam/trajex/totg/: json_serialization.cpp  json_serialization.hpp  observers.cpp  observers.hpp  path.cpp  path.hpp  trajectory.cpp  trajectory.hpp  uniform_sampler.cpp  waypoint_accumulator.cpp  waypoint_accumulator.hpp  waypoint_utils.cpp  waypoint_utils.hpp
src/viam/trajex/src/viam/trajex/totg/scripts/: visualize_trajectory.py
src/viam/trajex/src/viam/trajex/totg/test/: integration.cpp  main.cpp  observers.cpp  path_blends.cpp  path_segments.cpp  test_utils.cpp  test_utils.hpp  trajectory.cpp  uniform_sampler.cpp  waypoint_accumulator.cpp
src/viam/trajex/src/viam/trajex/totg/test/data/: gp12_backward_integration_exceeded-20260305.trajex-totg-replay.json  gp12_splice_point_infeasible-20260305.trajex-totg-replay.json
src/viam/trajex/src/viam/trajex/totg/tools/: legacy.cpp  legacy.hpp  legacy_colinearization.cpp  legacy_colinearization.hpp  planner.cpp  planner.hpp  replay.cpp  replay.hpp  replay_main.cpp  replay_planners.cpp  replay_planners.hpp  replay_trajectory.cpp
src/viam/trajex/src/viam/trajex/totg/tools/test/: legacy.cpp  main.cpp  planner.cpp
src/viam/trajex/src/viam/trajex/types/: angles.hpp  arc_acceleration.hpp  arc_length.hpp  arc_operations.hpp  epsilon.hpp  test.cpp
src/viam/trajex/totg/: json_serialization.cpp  json_serialization.hpp  observers.cpp  observers.hpp  path.cpp  path.hpp  test.cpp  totg.hpp  trajectory.cpp  trajectory.hpp  uniform_sampler.cpp  uniform_sampler.hpp  waypoint_accumulator.cpp  waypoint_accumulator.hpp
src/viam/trajex/totg/private/: phase_plane_slope.hpp
src/viam/trajex/totg/test/: integration.cpp  main.cpp  observers.cpp  path_basic.cpp  path_blends.cpp  path_coalescing.cpp  path_cursor.cpp  path_segments.cpp  test_utils.cpp  trajectory.cpp  uniform_sampler.cpp  waypoint_accumulator.cpp
src/viam/trajex/types/: arc_acceleration.hpp  arc_length.hpp  arc_operations.hpp  arc_velocity.hpp  epsilon.hpp  hertz.hpp  test.cpp
src/viam/ur/: main.cpp  test.cpp  ur_arm.cpp  ur_arm.hpp
src/viam/ur/module/: dh_kinematics.cpp  dh_kinematics.hpp  kinematics_parser.cpp  kinematics_parser.hpp  test.cpp  trajectory_logger.cpp  trajectory_logger.hpp  ur_arm.cpp  ur_arm.hpp  ur_arm_config.hpp.in  ur_arm_state.cpp  ur_arm_state.hpp  ur_arm_state_connected.cpp  ur_arm_state_controlled.cpp  ur_arm_state_disconnected.cpp  ur_arm_state_events.cpp  ur_arm_state_independent.cpp  utils.cpp  utils.hpp
src/viam/ur/utils/visualization/: .gitignore  Makefile  README.md  cached_plan.go  go.mod  go.sum  graph.go  graph_test.go
src/viam/utils/visualization/: .gitignore  Makefile  README.md  go.sum
